# ag3ntwerk

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSING.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  security.yml
config/: config.yaml  settings.yaml
deploy/helm/ag3ntwerk/: Chart.yaml  values.yaml
deploy/kubernetes/base/: deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.env.example  service.yaml  serviceaccount.yaml
deploy/vps/: .env.example  Caddyfile  docker-compose.vps.yml  setup.sh
docs/: API.md  ARCHITECTURE.md  CLI.md  CSuite Execs  GETTING_STARTED.md  OLLAMA_MIGRATION_GUIDE.md  agent_architecture.md
docs/architecture/: CONSOLIDATED_ROADMAP.md
docs/operations/: RUNBOOK_STARTUP.md  RUNBOOK_TROUBLESHOOTING.md  SLO_DEFINITIONS.md
examples/: basic_usage.py
scripts/: create-desktop-shortcut.bat  create_shortcut.ps1  launch_csuite_gui.pyw  launch_nexus_gui.pyw  relay-agent.py  rename_for_release.py  setup_github_repo.ps1  setup_github_repo.sh  setup_ollama.ps1  setup_ollama.sh  start_system.py
src/ag3ntwerk/: __init__.py  cli.py  initialization.py  licensing.py  run.py
src/auth_core/: __init__.py  api_key.py  jwt.py
tests/: __init__.py  conftest.py  test_config_env.py  test_gpt4all.py  test_smoke_imports.py
tests/e2e/: __init__.py  test_architecture_smoke.py  test_nexus_agentwerk_full_flow.py  test_nexus_csuite_full_flow.py  test_smoke.py
tests/integration/: __init__.py  test_full_pipeline.py  test_learning_integration.py  test_llm_providers.py  test_nexus_csuite_bridge.py  test_workflows.py
tests/learning/: test_phase10_learning.py
tests/load/: __init__.py  load_test_utils.py  test_agent_stress.py  test_api_load.py
tests/unit/: __init__.py  test_accord_agent.py  test_accord_managers.py  test_aegis_agent.py  test_aegis_managers.py  test_ag3ntwerk_bridge_listener.py  test_ag3ntwerk_execution.py  test_agenda_engine.py  test_agent_content_facades.py  test_agent_registry.py  test_ai_interviewer.py  test_api_endpoints.py  test_autonomous_tasks.py  test_axiom_agent.py  test_base.py  test_blueprint_agent.py  test_capability_registry.py  test_circuit_breaker.py  test_citadel_agent.py  test_citadel_managers.py  test_cli.py  test_cloud_providers.py  test_compass_agent.py  test_confidence_calibrator.py  test_config.py  test_content_distribution_pipeline.py  test_conversation_store.py  test_deployment_hardening.py  test_dynamic_router.py  test_echo_agent.py  test_ensemble_feedback.py  test_error_paths.py  test_exceptions.py  test_expertise_extractor.py  test_failure_predictor.py  test_feedback_integration.py  test_feedback_pipeline.py  test_forge_agent.py  test_forge_nexus_agent.py  test_foundry_managers.py  (+100 more)
(+519 files in other folders)
